[package]
name = "bitsets"
version = "0.1.0"
authors = ["dignifiedquire <dignifiedquire@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"


[dependencies]
rand = "0.6.5"
bitvec = "0.10"
unsigned-varint = "0.2.2"
croaring = "0.3.8"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
prettytable-rs = "0.8.0"
lazy_static = "1.3.0"
